config-root/namespaces/jx-staging/py-jx/py-jx-py-jx-deploy.yaml
# Source: py-jx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-jx-py-jx
  labels:
    draft: draft-app
    chart: "py-jx-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: py-jx-py-jx
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: py-jx-py-jx
    spec:
      serviceAccountName: py-jx-py-jx
      containers:
        - name: py-jx
          image: "10.104.74.249/gokula-krishna-dev/py-jx:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
