config-root/namespaces/jx-staging/py-jx/py-jx-svc.yaml
# Source: py-jx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-jx
  labels:
    chart: "py-jx-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: py-jx-py-jx
