config-root/namespaces/jx-staging/py-jx/py-jx-ingress.yaml
# Source: py-jx/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: py-jx
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: py-jx
              servicePort: 80
      host: py-jx-jx-staging.192.168.99.114.nip.io
